@@ -40,9 +40,9 @@ ext {
     slf4jVersion = "1.7.6"
 
     spockVersion = '0.7-groovy-2.0'
-    springLoadedVersion = "1.2.0.RELEASE"
+    springLoadedVersion = "1.2.1.RELEASE"
     springBootVersion = "1.1.7.RELEASE"
-    springLoadedCommonOptions = "-noverify -Dspringloaded.synchronize=true -Djdk.reflect.allowGetCallerClass=true"
+    springLoadedCommonOptions = "-Xverify:none -Dspringloaded.synchronize=true -Djdk.reflect.allowGetCallerClass=true"
     springVersion = "4.0.7.RELEASE"
     ehcacheVersion = "2.4.6"
     junitVersion = "4.11"
